# django_template_course

./: README.md  links.txt  manage.py  pyproject.toml  test_jwt.py
basic_django/: settings.py  urls.py  wsgi.py
crypto_main/: admin.py  apps.py  models.py
crypto_main/migrations/: 0001_initial.py
polls/: urls.py  views.py
polls/migrations/: 0001_initial.py
templates/includes/: head.html  menu-list.html
templates/layouts/: base.html  main.html
templates/pages/: user.html
templates/polls/: index.html
