[tool.poetry]
name = "django test"
version = "0.0.1"
description = "Simple example project with Django"
authors = ["smac4343"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.0"
django = "4.2.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
