[tool.poetry]
name = "django test"
version = "0.0.1"
description = "Simple example project with Django"
authors = ["smac4343"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.0"
django = "4.2.0"
jwt = "^1.3.1"
pyjwt = "^2.8.0"
psycopg2-binary = "^2.9.9"
black = "^24.4.0"
isort = "^5.13.2"
pylint = "^3.1.0"
pylint-django = "^2.5.5"
mypy = "^1.9.0"
django-stubs = "^4.2.7"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
